ui: fix for wrong margin in header

--- a/ui/src/common/layouts/Header/Header.less
+++ b/ui/src/common/layouts/Header/Header.less
@@ -32,7 +32,9 @@
 
   .non-sticky {
     background-color: @layout-header-background;
-    margin-top: 4rem;
+    &.mt6 {
+      margin-top: 6.3rem !important;
+    }
 
     // remove the margin top for mobile
     // because .sticky is not stick anymore
